# Market-Making

./: .gitignore  Cargo.toml  DATA_GUIDE.md  DETAILED_README.md  PARAMETER_SWEEP.md  QUICK_START.md  README.md  RESULTS.md  run_test.sh  sweep_mar2025_mp_edge_scale.csv  sweep_phase1_prob_btc_jan2025.csv
configs/: backtest_engine_harness.yaml  btc_usd.yaml  btc_usdt.yaml  eth_usd.yaml  eth_usdt.yaml  rebate_mm_btc.yaml  rebate_mm_btcusdt.yaml  rebate_mm_eth.yaml  sweep_conditional_touch_base_eth.yaml  sweep_dynamic_conditional_touch_btc.yaml  sweep_dynamic_conditional_touch_eth.yaml  sweep_dynamic_size_cap_btc.yaml  sweep_rebate_mm.yaml  sweep_spread_depth_phase1_btc.yaml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  registry.rs
crates/backtest-engine/: Cargo.toml
crates/backtest-engine/src/: latency.rs  lib.rs  metrics.rs  portfolio.rs  runner.rs  simulator.rs
crates/backtest-engine/tests/: backtest_24h.rs  backtest_s3.rs  backtest_s3_multi_pair.rs  backtest_s3_queue_farmer.rs  backtest_s3_rebate_alpha.rs  backtest_sftp.rs  determinism_test.rs  integration_test.rs  simple_backtest.rs  validate_against_hummingbot.rs  validate_s3_data.rs
crates/cli/: Cargo.toml
crates/cli/src/: check_dates.rs  live_paper.rs  main.rs  sftp_key.rs  sftp_to_s3.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  fee.rs  fill.rs  lib.rs  order.rs  snapshot.rs
crates/crypto-com-api/: Cargo.toml
crates/crypto-com-api/src/: auth.rs  lib.rs  rest.rs  websocket.rs
crates/data-loader/: Cargo.toml
crates/data-loader/src/: csv_parser.rs  lib.rs  loader.rs  multi_csv_parser.rs  s3_loader.rs  sftp_loader.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  fee_model.rs  latency.rs  lib.rs  round_trip.rs
crates/engine/tests/: backtest_s3_queue_farmer.rs  backtest_s3_queue_farmer_v2.rs  backtest_s3_queue_farmer_v3.rs  backtest_s3_queue_farmer_v4.rs  backtest_s3_queue_farmer_v5.rs  backtest_s3_rebate_mm.rs  backtest_s3_sweep.rs  colo_sim_backtest.rs  engine_backtest.rs
crates/engine/tests/common/: mod.rs  rebate_mm_sweep_builder.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: collector.rs  inventory.rs  lib.rs  markout.rs  round_trip.rs
crates/mm-core/: Cargo.toml
crates/mm-core/src/: config.rs  lib.rs  market_data.rs  portfolio.rs  strategy.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: lib.rs  order.rs  snapshot.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: lib.rs  portfolio.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: engine.rs  lib.rs  simulated_order.rs
crates/simulator/tests/: engine_test.rs
crates/strategies/balanced-mm/: Cargo.toml
crates/strategies/balanced-mm/src/: lib.rs  strategy.rs
crates/strategies/queue-farmer/: Cargo.toml
crates/strategies/queue-farmer-v2/: Cargo.toml
crates/strategies/queue-farmer-v2/src/: lib.rs  strategy.rs
crates/strategies/queue-farmer-v3/: Cargo.toml
crates/strategies/queue-farmer-v3/src/: lib.rs  strategy.rs
crates/strategies/queue-farmer-v4/: Cargo.toml
crates/strategies/queue-farmer-v4/src/: lib.rs  strategy.rs
crates/strategies/queue-farmer/src/: lib.rs  strategy.rs
crates/strategies/rebate-alpha/: Cargo.toml
crates/strategies/rebate-alpha/src/: lib.rs  strategy.rs
crates/strategies/rebate-mm/: Cargo.toml
crates/strategies/rebate-mm/src/: lib.rs  strategy.rs
scripts/: aggregate_fills_by_day.sh  aggregate_pnl_by_regime.sh  aggregate_regime_by_day.sh  analyze_markout_1s.py  check_2025_dates.sh  check_available_dates.sh  combine_monthly_backtests.py  download_and_upload_to_s3.sh  run_balanced_mm_backtest.sh  run_rebate_alpha_backtest.sh  run_rebate_backtest.sh  s3_l2_month_report.sh  upload_to_s3.sh  visualize_backtest.py
tests/: README.md  integration_test.rs  simple_backtest.rs
tests/common/: mod.rs
