[workspace]
members = [
    "crates/core",
    "crates/mm-core",
    "crates/simulator",
    "crates/portfolio",
    "crates/metrics",
    "crates/engine",
    "crates/orderbook",
    "crates/backtest-engine",
    "crates/strategies/balanced-mm",
    "crates/strategies/rebate-alpha",
    "crates/strategies/queue-farmer",
    "crates/strategies/queue-farmer-v2",
    "crates/strategies/queue-farmer-v3",
    "crates/strategies/queue-farmer-v4",
    "crates/strategies/rebate-mm",
    "crates/assets",
    "crates/data-loader",
    "crates/crypto-com-api",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Decimal arithmetic
rust_decimal = "1.32"
rust_decimal_macros = "1.32"

# Time handling
chrono = "0.4"

# CSV parsing
csv = "1.3"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Math
num-traits = "0.2"

# HTTP client (for future API)
reqwest = { version = "0.11", features = ["json"] }

# WebSocket (for future API)
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
