[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
orderbook = { path = "../orderbook" }
rust_decimal = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.0"
ssh2 = "0.9"
lru = "0.12"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
