[package]
name = "queue-farmer-v2"
version = "0.1.0"
edition = "2021"

description = "QueueFarmer v2 — flow imbalance filter, pump/dump defense, simplified"

[dependencies]
mm-core = { path = "../../mm-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
