[package]
name = "queue-farmer-v4"
version = "0.1.0"
edition = "2021"

description = "QueueFarmer v4 — tick-based quoting, spread filter, adverse selection defense"

[dependencies]
mm-core = { path = "../../mm-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
