[package]
name = "queue-farmer"
version = "0.1.0"
edition = "2021"

description = "QueueFarmer ETH/USDT rebate strategy - tight quotes, maker rebates, hard inv stop"

[dependencies]
mm-core = { path = "../../mm-core" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
